--- a/apps/core/templates/base.html
+++ b/apps/core/templates/base.html
@@ -51,6 +51,10 @@
             </div>
         </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    {% block scripts %}
+    {% endblock %}
 </body>
 
 </html>
