--- a/apps/cart/templates/cart.html
+++ b/apps/cart/templates/cart.html
@@ -7,12 +7,36 @@
   <h1 class="title">Cart</h1>
 
   {% if cart %}
-  {% for item in cart %}
-  {% with product=item.product %}
-  <p>{{ product.title }}</p>
-  <button @click="removeFromCart({{ product.id }})">Remove from cart</button>
-  {% endwith %}
-  {% endfor %}
+  <div class="table">
+    <table class="table">
+      <thead>
+        <th>Product</th>
+        <th>Quantity</th>
+        <th>Price</th>
+        <th></th>
+      </thead>
+
+      <tbody>
+        <tr v-for="product in products">
+          <td>[[ product.title ]]</td>
+          <td><button @click="decrementQuantity(product.id, product.quantity, product.price)">-</button> [[
+            product.quantity ]] <button
+              @click="incrementQuantity(product.id, product.quantity, product.price)">+</button></td>
+          <td>[[ product.total_price ]]</td>
+          <td><button @click="removeFromCart(product.id)">Remove from cart</button></td>
+        </tr>
+      </tbody>
+
+      <tfoot>
+        <tr>
+          <td>Total cost:</td>
+          <td>[[ numItems ]]</td>
+          <td></td>
+          <td>[[ totalCost ]]</td>
+        </tr>
+      </tfoot>
+    </table>
+  </div>
   {% else %}
   <p>Your cart is empty!</p>
   {% endif %}
@@ -23,41 +47,128 @@
 <script>
   var productapp = new Vue({
     el: '#cartapp',
-    delimeters: ['[[', ']]'],
+    delimiters: ['[[', ']]'],
+    store: store,
     data() {
       return {
-
-      }
+        products: [{{ productsstring | safe}
+    }]
+  }
     },
-    mounted() {
-      console.log('Mounted');
+  computed: {
+    numItems: function () {
+      return store.state.numItems
     },
-    methods: {
-      removeFromCart(product_id) {
-        console.log('Product_id:', product_id);
-
-        var data = {
-          'product_id': product_id
-        };
-
-        fetch('/api/remove_from_cart/', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json',
-            'X-CSRFToken': '{{ csrf_token }}'
-          },
-          credentials: 'same-origin',
-          body: JSON.stringify(data)
-        })
-          .then((response) => {
-            console.log(response)
-          })
-          .catch(function (error) {
-            console.log('Error 2');
-            console.log(error);
-          })
-      }
+    totalCost: function () {
+      return store.state.totalCost
     }
+  },
+  methods: {
+    incrementQuantity(product_id, quantity, price) {
+      console.log('Product_id:', product_id);
+
+      var data = {
+        'product_id': product_id,
+        'update': true,
+        'quantity': parseInt(quantity) + 1
+      };
+
+      console.log(price);
+
+      store.commit('increment', 1);
+      store.commit('changeTotalCost', parseFloat(price));
+
+      fetch('/api/add_to_cart/', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json',
+          'X-CSRFToken': '{{ csrf_token }}'
+        },
+        credentials: 'same-origin',
+        body: JSON.stringify(data)
+      })
+        .then((response) => {
+          console.log(response)
+
+          for (var i = 0; i < this.products.length; i++) {
+            var product = this.products[i];
+
+            if (product.id === product_id) {
+              this.products[i].quantity = parseInt(this.products[i].quantity) + 1;
+              this.products[i].total_price = parseInt(this.products[i].quantity) * parseFloat(this.products[i].price)
+            }
+          }
+        })
+        .catch(function (error) {
+          console.log('Error 2');
+          console.log(error);
+        })
+    },
+    decrementQuantity(product_id, quantity, price) {
+      console.log('Product_id:', product_id);
+
+      var data = {
+        'product_id': product_id,
+        'update': true,
+        'quantity': parseInt(quantity) - 1
+      };
+
+      store.commit('increment', -1);
+      store.commit('changeTotalCost', -parseFloat(price));
+
+      fetch('/api/add_to_cart/', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json',
+          'X-CSRFToken': '{{ csrf_token }}'
+        },
+        credentials: 'same-origin',
+        body: JSON.stringify(data)
+      })
+        .then((response) => {
+          console.log(response)
+
+          for (var i = 0; i < this.products.length; i++) {
+            var product = this.products[i];
+
+            if (product.id === product_id) {
+              this.products[i].quantity = parseInt(this.products[i].quantity) - 1;
+              this.products[i].total_price = parseInt(this.products[i].quantity) * parseFloat(this.products[i].price)
+            }
+          }
+        })
+        .catch(function (error) {
+          console.log('Error 2');
+          console.log(error);
+        })
+    },
+    removeFromCart(product_id) {
+      console.log('Product_id:', product_id);
+
+      var data = {
+        'product_id': product_id
+      };
+
+      fetch('/api/remove_from_cart/', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json',
+          'X-CSRFToken': '{{ csrf_token }}'
+        },
+        credentials: 'same-origin',
+        body: JSON.stringify(data)
+      })
+        .then((response) => {
+          console.log(response)
+
+          this.products = this.products.filter(product => product.id !== product_id)
+        })
+        .catch(function (error) {
+          console.log('Error 2');
+          console.log(error);
+        })
+    }
+  }
   });
 </script>
 {% endblock %}
