--- a/apps/cart/templates/cart.html
+++ b/apps/cart/templates/cart.html
@@ -7,43 +7,110 @@
   <h1 class="title">Cart</h1>
 
   {% if cart %}
-  <div class="table">
-    <table class="table">
-      <thead>
-        <th>Product</th>
-        <th>Quantity</th>
-        <th>Price</th>
-        <th></th>
-      </thead>
+  <div v-if="products.length > 0">
+    <div class="table">
+      <table class="table">
+        <thead>
+          <th>Product</th>
+          <th>Quantity</th>
+          <th>Price</th>
+          <th></th>
+        </thead>
 
-      <tbody>
-        <tr v-for="product in products">
-          <td>[[ product.title ]]</td>
-          <td><button @click="decrementQuantity(product.id, product.quantity, product.price)">-</button> [[
-            product.quantity ]] <button
-              @click="incrementQuantity(product.id, product.quantity, product.price)">+</button></td>
-          <td>[[ product.total_price ]]</td>
-          <td><button @click="removeFromCart(product.id)">Remove from cart</button></td>
-        </tr>
-      </tbody>
+        <tbody>
+          <tr v-for="product in products">
+            <td>[[ product.title ]]</td>
+            <td><button @click="decrementQuantity(product.id, product.quantity, product.price)">-</button> [[
+              product.quantity ]] <button
+                @click="incrementQuantity(product.id, product.quantity, product.price)">+</button></td>
+            <td>[[ product.total_price ]]</td>
+            <td><button @click="removeFromCart(product.id)">Remove from cart</button></td>
+          </tr>
+        </tbody>
 
-      <tfoot>
-        <tr>
-          <td>Total cost:</td>
-          <td>[[ numItems ]]</td>
-          <td></td>
-          <td>[[ totalCost ]]</td>
-        </tr>
-      </tfoot>
-    </table>
+        <tfoot>
+          <tr>
+            <td>Total cost:</td>
+            <td>[[ numItems ]]</td>
+            <td></td>
+            <td>[[ totalCost ]]</td>
+          </tr>
+        </tfoot>
+      </table>
+    </div>
+
+    <form v-on:submit.prevent="submitForm()">
+      <div class="field">
+        <div class="control">
+          <label>First name</label>
+          <input type="text" name="first_name" v-model="first_name">
+        </div>
+      </div>
+
+      <div class="field">
+        <div class="control">
+          <label>Last name</label>
+          <input type="text" name="last_name" v-model="last_name">
+        </div>
+      </div>
+
+      <div class="field">
+        <div class="control">
+          <label>E-mail</label>
+          <input type="text" name="email" v-model="email">
+        </div>
+      </div>
+
+      <div class="field">
+        <div class="control">
+          <label>Address</label>
+          <input type="text" name="address" v-model="address">
+        </div>
+      </div>
+
+      <div class="field">
+        <div class="control">
+          <label>Zip code</label>
+          <input type="text" name="zipcode" v-model="zipcode">
+        </div>
+      </div>
+
+      <div class="field">
+        <div class="control">
+          <label>Place</label>
+          <input type="text" name="place" v-model="place">
+        </div>
+      </div>
+
+      <div class="field">
+        <div class="control">
+          <button class="button is-primary">Check out</button>
+        </div>
+      </div>
+    </form>
   </div>
+  <p v-else>Your cart is empty!</p>
   {% else %}
   <p>Your cart is empty!</p>
   {% endif %}
+
+  <div v-if="errors.length > 0">
+    <article class="message is-danger" v-for="error in errors">
+      <div class="message-header">
+        <p>Error</p>
+      </div>
+      <div class="message-body">
+        [[ error ]]
+      </div>
+    </article>
+  </div>
+
+  <button @click="buy()">Check out</button>
 </div>
 {% endblock %}
 
 {% block scripts %}
+<script type="application/javascript" src="https://js.stripe.com/v3/"></script>
 <script>
   var productapp = new Vue({
     el: '#cartapp',
@@ -51,19 +118,121 @@
     store: store,
     data() {
       return {
-        products: [{{ productsstring | safe}
+        errors: [],
+        first_name: '',
+        last_name: '',
+        email: '',
+        address: '',
+        zipcode: '',
+        place: '',
+        products: [{{ productsstring| safe }
     }]
   }
-    },
+        },
   computed: {
-    numItems: function () {
+    numItems: function() {
       return store.state.numItems
     },
-    totalCost: function () {
+    totalCost: function() {
       return store.state.totalCost
     }
   },
   methods: {
+    buy() {
+      var data = {
+        'first_name': this.first_name,
+        'last_name': this.last_name,
+        'email': this.email,
+        'address': this.address,
+        'zipcode': this.zipcode,
+        'place': this.place
+      };
+
+      this.errors = [];
+
+      if (data.first_name === '') {
+        this.errors.push('First name is empty');
+      }
+
+      if (data.last_name === '') {
+        this.errors.push('Last name is empty');
+      }
+
+      if (data.email === '') {
+        this.errors.push('Email is empty');
+      }
+
+      if (data.address === '') {
+        this.errors.push('Address is empty');
+      }
+
+      if (data.zipcode === '') {
+        this.errors.push('Zip code is empty');
+      }
+
+      if (data.place === '') {
+        this.errors.push('Place is empty');
+      }
+
+      if (this.errors.length === 0) {
+        var stripe = Stripe('{{ pub_key }}');
+
+        fetch('/api/create_checkout_session/', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+            'X-CSRFToken': '{{ csrf_token }}'
+          },
+          credentials: 'same-origin'
+        })
+          .then(function (response) {
+            return response.json()
+          })
+          .then(function (session) {
+            return stripe.redirectToCheckout({ sessionId: session.session.id })
+          })
+          .then(function (result) {
+            if (result.error) {
+              alert(result.error.message)
+            }
+          })
+          .catch(function (error) {
+            console.log('Error:', error);
+          });
+      }
+    },
+    submitForm() {
+      console.log('Submit form');
+
+      var data = {
+        'first_name': this.first_name,
+        'last_name': this.last_name,
+        'email': this.email,
+        'address': this.address,
+        'zipcode': this.zipcode,
+        'place': this.place
+      };
+
+      fetch('/api/checkout/', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json',
+          'X-CSRFToken': '{{ csrf_token }}'
+        },
+        credentials: 'same-origin',
+        body: JSON.stringify(data)
+      })
+        .then((response) => {
+          console.log('Success');
+          console.log(response);
+
+          window.location.href = '/';
+        })
+        .catch(function (error) {
+          console.log('Error 2');
+          console.log(error);
+        })
+    },
     incrementQuantity(product_id, quantity, price) {
       console.log('Product_id:', product_id);
 
@@ -72,8 +241,6 @@
         'update': true,
         'quantity': parseInt(quantity) + 1
       };
-
-      console.log(price);
 
       store.commit('increment', 1);
       store.commit('changeTotalCost', parseFloat(price));
@@ -113,37 +280,41 @@
         'quantity': parseInt(quantity) - 1
       };
 
-      store.commit('increment', -1);
-      store.commit('changeTotalCost', -parseFloat(price));
+      if (parseInt(quantity) - 1 === 0) {
+        this.removeFromCart(product_id);
+      } else {
+        store.commit('increment', -1);
+        store.commit('changeTotalCost', -parseFloat(price));
 
-      fetch('/api/add_to_cart/', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json',
-          'X-CSRFToken': '{{ csrf_token }}'
-        },
-        credentials: 'same-origin',
-        body: JSON.stringify(data)
-      })
-        .then((response) => {
-          console.log(response)
+        fetch('/api/add_to_cart/', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+            'X-CSRFToken': '{{ csrf_token }}'
+          },
+          credentials: 'same-origin',
+          body: JSON.stringify(data)
+        })
+          .then((response) => {
+            console.log(response)
 
-          for (var i = 0; i < this.products.length; i++) {
-            var product = this.products[i];
+            for (var i = 0; i < this.products.length; i++) {
+              var product = this.products[i];
 
-            if (product.id === product_id) {
-              this.products[i].quantity = parseInt(this.products[i].quantity) - 1;
-              this.products[i].total_price = parseInt(this.products[i].quantity) * parseFloat(this.products[i].price)
+              if (product.id === product_id) {
+                this.products[i].quantity = parseInt(this.products[i].quantity) - 1;
+                this.products[i].total_price = parseInt(this.products[i].quantity) * parseFloat(this.products[i].price)
+              }
             }
-          }
-        })
-        .catch(function (error) {
-          console.log('Error 2');
-          console.log(error);
-        })
+          })
+          .catch(function (error) {
+            console.log('Error 2');
+            console.log(error);
+          })
+      }
     },
     removeFromCart(product_id) {
-      console.log('Product_id:', product_id);
+      console.log('Remove product_id:', product_id);
 
       var data = {
         'product_id': product_id
@@ -169,6 +340,6 @@
         })
     }
   }
-  });
+    });
 </script>
 {% endblock %}
