--- a/apps/store/templates/product_detail.html
+++ b/apps/store/templates/product_detail.html
@@ -22,6 +22,7 @@
   var productapp = new Vue({
     el: '#productapp',
     delimeters: ['[[', ']]'],
+    store: store,
     data() {
       return {
 
@@ -51,6 +52,8 @@
         })
           .then((response) => {
             console.log(response)
+
+            store.commit('increment', 1);
           })
           .catch(function (error) {
             console.log('Error 2');
