--- a/apps/cart/templates/cart.html
+++ b/apps/cart/templates/cart.html
@@ -19,11 +19,12 @@
 
         <tbody>
           <tr v-for="product in products">
-            <td>[[ product.title ]]</td>
-            <td><button @click="decrementQuantity(product.id, product.quantity, product.price)">-</button> [[
-              product.quantity ]] <button
-                @click="incrementQuantity(product.id, product.quantity, product.price)">+</button></td>
-            <td>[[ product.total_price ]]</td>
+            <td> {{product.title}} </td>
+            <td><button @click="decrementQuantity(product.id, product.quantity, product.price)">-</button>
+              {{product.quantity }}
+              <button @click="incrementQuantity(product.id, product.quantity, product.price)">+</button>
+            </td>
+            <td> {{product.total_price}} </td>
             <td><button @click="removeFromCart(product.id)">Remove from cart</button></td>
           </tr>
         </tbody>
@@ -31,9 +32,9 @@
         <tfoot>
           <tr>
             <td>Total cost:</td>
-            <td>[[ numItems ]]</td>
+            <td>{{numItems }}</td>
             <td></td>
-            <td>[[ totalCost ]]</td>
+            <td>{{totalCost }}</td>
           </tr>
         </tfoot>
       </table>
@@ -100,7 +101,7 @@
         <p>Error</p>
       </div>
       <div class="message-body">
-        [[ error ]]
+        {{ error }}
       </div>
     </article>
   </div>
@@ -110,6 +111,7 @@
 {% endblock %}
 
 {% block scripts %}
+<script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
 <script type="application/javascript" src="https://js.stripe.com/v3/"></script>
 <script>
   var productapp = new Vue({
@@ -125,15 +127,17 @@
         address: '',
         zipcode: '',
         place: '',
-        products: [{{ productsstring| safe }
+        products: [{{ productsstring | safe}
     }]
   }
-        },
+    },
   computed: {
-    numItems: function() {
+    numItems: function () {
+      console.log("numItems");
       return store.state.numItems
     },
-    totalCost: function() {
+    totalCost: function () {
+      console.log("totalCost");
       return store.state.totalCost
     }
   },
@@ -341,6 +345,6 @@
         })
     }
   }
-    });
+  });
 </script>
 {% endblock %}
