--- a/apps/store/templates/product_detail.html
+++ b/apps/store/templates/product_detail.html
@@ -28,13 +28,8 @@
 
       }
     },
-    mounted() {
-      console.log('Mounted');
-    },
     methods: {
       addToCart(product_id) {
-        console.log('Product_id:', product_id);
-
         var data = {
           'product_id': product_id,
           'update': false,
@@ -51,12 +46,10 @@
           body: JSON.stringify(data)
         })
           .then((response) => {
-            console.log(response)
-
+            console.log("res", response);
             store.commit('increment', 1);
           })
           .catch(function (error) {
-            console.log('Error 2');
             console.log(error);
           })
       }
